# divine-office

./: .gitattributes  .gitignore  Cargo.toml  README.md  autumn_calendar.tex  autumn_capitulary.tex  autumn_collectary.tex  autumn_diurnal.tex  autumn_lectionary.tex  autumn_nocturnale.tex  autumn_vesperale.tex  build.js  capitulary_commons.tex  christmas_calendar.tex  christmas_capitulary.tex  christmas_collectary.tex  christmas_vesperale.tex  conf.tex  customary.tex  divine_office.d.ts  divine_office.js  divine_office_bg.wasm  divine_office_bg.wasm.d.ts  full_calendar.tex  horarium.html  index.html  noclune_calendar.tex  noclune_capitulary.tex  noclune_collectary.tex  noclune_diurnal.tex  noclune_lectionary.tex  noclune_vesperale-a.tex  noclune_vesperale.tex  ordinal.tex  psalm-checker.py  small_office_lectionary.tex  small_offices.tex  vol1-advent-calendar.tex  vol1-advent-capitulary.tex  vol1-advent-collectary.tex  (+17 more)
backend/: .gitignore  Cargo.toml  master.lit
backend/.cargo/: config.toml
backend/antiphon/: a-viro-iniquo.gabc  ad-te-de-luce.gabc  ad-te-domine.gabc  adjutorium-nostrum.gabc  adorate-dominum.gabc  alleluia-alleluia-alleluia(sunday-matins).gabc  alleluia-verbum-caro.gabc  annunciate-populis.gabc  auribus-percipite.gabc  avertet-dominus.gabc  beata-es-maria.gabc  beati-omnes.gabc  beatus-vir.gabc  benedic-anima-mea.gabc  benedixisti-domine.gabc  benefac-domine.gabc  benigne-fac.gabc  bethlehem-non-es-minima.gabc  canite-tuba.gabc  confitebor-domino.gabc  constantes-estote.gabc  conversus-est.gabc  convertere-domine.gabc  cunctis-diebus.gabc  da-mercedem-domine.gabc  da-nobis-domine.gabc  dabo-in-syon.gabc  de-celo-veniet.gabc  de-syon-exhibit-lex.gabc  de-syon-veniet-dominus.gabc  de-syon-veniet.gabc  deo-nostro.gabc  deus-a-libano.gabc  domine-audivi.gabc  domine-deus.gabc  domine-refugium.gabc  dominus-defensor.gabc  dominus-legifer-noster.gabc  dominus-veniet-occurite.gabc  dum-venerit-filius.gabc  (+90 more)
backend/antiphons/: test.gabc
backend/compline/: christmas.lit  ordinary.lit
backend/invitatory/: prestolantes-redemptorem.lit  prope-est-jam-dominus.lit  regem-venturum.lit
backend/matins/: saturday.lit  sunday.lit  tuesday.lit
backend/prime/: sunday.lit
backend/resp/: aspiciebam-in-visu-noctis.gabc  aspiciens-a-longe.gabc  bethlehem-civitas-dei.gabc  canite-tuba.gabc  civitas-hierusalem.gabc  clama-in-fortitudine.gabc  docebit-nos-dominus.gabc  ecce-jam-veniet.gabc  egypte-noli-flere.gabc  erumpant-montes.gabc  germinaverunt-campi.gabc  hierusalem-cito-veniet.gabc  intuemini-quantus.gabc  juravi-dicit-dominus.gabc  me-oportet-minui.gabc  modo-veniet-dominator.gabc  montes-israel.gabc  non-auferetur-sceptrum.gabc  octavadecima-die.gabc  ostende-nobis.gabc  prope-est-ut-veniat.gabc  qui-venturus-est.gabc  veni-ad-liberandum-nos.gabc  virgo-israel.gabc
backend/sext/: advent-feria.lit  sunday.lit
backend/src/: asset.rs  compiler.rs  gabc.rs  kalendar.rs  lexer.rs  lib.rs  liturgy.rs  parser.rs  preprocessor.rs  runtime.rs  (+2 more)
(+3728 files in other folders)
