[package]
name = "divine-office"
version = "0.1.0"
edition = "2021"

[dependencies]

rouille = "3.6"
chrono = "0.4"
computus = { version = "1.1", features = ["chrono"] }
regex = "1"
lazy_static = "1.4"
build_html = "2.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }