[package]
name = "divine-office"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]

rouille = "3.6"
chrono = "0.4"
computus = { version = "1.1", features = ["chrono"] }
regex = "1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
rust-embed = { version = "8.4.0", features=["include-exclude"] }