[package]
name = "divine-office"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]

chrono = "0.4"
computus = { version = "1.1", features = ["chrono"] }
regex = "1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
rust-embed = { version = "8.4.0", features=["include-exclude"] }
wasm-bindgen = "0.2.87"
serde_json = "1.0.138"
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'