[package]
name = "divine-office"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
computus = { version = "1.1", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
wasm-bindgen = "0.2.87"
serde_json = "1.0.138"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib", "rlib"]